--- a/src/scss/theme.less
+++ b/src/scss/theme.less
@@ -20,10 +20,6 @@
   table-layout: auto !important;
 }
 
-.ant-table-content {
-  overflow: auto !important;
-}
-
 .ant-table-thead {
   position: sticky;
   top: -1px;
@@ -120,11 +116,6 @@ td.ant-table-column-sort {
 
 .ant-table-thead th.ant-table-column-sort,
 .ant-table-thead th.ant-table-column-has-sorters:hover {
-  background: @primary-background;
-}
-
-.ant-table-cell-fix-left,
-.ant-table-thead th.ant-table-column-has-sorters.ant-table-cell-fix-left:hover {
   background: @primary-background;
 }
 
